--- a/public/login.html
+++ b/public/login.html
@@ -3,24 +3,40 @@
 <html>
 
 	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
+		<title>Voting App</title>
 		
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
+                <!-- Latest compiled and minified CSS -->
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+                <!-- Optional theme -->
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+                <!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
-		<div class="container">	
-			<div class="login">
-				<img src="/public/img/clementine_150.png" />
-				<br />
-				<p class="clementine-text">Clementine.js</p>
-				<a href="/auth/github">
-					<div class="btn" id="login-btn">
-						<img src="/public/img/github_32px.png" alt="github logo" />
-						<p>LOGIN WITH GITHUB</p>
-					</div>
-				</a>
+   		<nav class="navbar navbar-default navbar-inverse bg-inverse">
+			<div class="navbar-header">
+			  <a href="#" class="navbar-brand">Voting App</a>
 			</div>
+			<div class="container container-fluid">
+			  <ul class="nav navbar-nav navbar-right">
+
+			    <li><a href="#">Home</a></li>
+				<li><a href="/auth/github">
+				  Login With Github
+				</a></li>
+
+
+			  </ul>
+			</div>
+		</nav>
+		<div class="container-fluid">
+		  <h1>FCC voting</h1>
+		  <h2>Check out these polls below</h2>
+		  <h3>Click a poll to participate and see the results, or sign in to create your own poll</h3>
 		</div>
 	</body>
 
