add some basic functionality

--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,12 @@
 		  <h1>FCC voting</h1>
 		  <h2>Check out these polls below</h2>
 		  <h3>Click a poll to participate and see the results, or sign in to create your own poll</h3>
+		  <ul id="poll-list">
+		  	
+		  </ul>
 		</div>
+		<script type="text/javascript" src="common/ajax-functions.js"></script>
+		<script type="text/javascript" src="controllers/pollController.client.js"></script>
 	</body>
 
 </html>
