add poll deletion

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 		<div class="container-fluid">
 		  <h1>FCC voting</h1>
 		  <h2>Check out these polls below</h2>
-		  <h3>Click a poll to participate and see the results, or sign in to create your own poll</h3>
+		  <h3>Click a poll to participate and see the results, or <a href="/newpoll">create your own poll</a></h3>
 		  <ul id="poll-list">
 		  	
 		  </ul>
