--- a/public/showpoll.html
+++ b/public/showpoll.html
@@ -25,6 +25,7 @@
 			        <li><a href="/api/vote/{{../_id}}/{{@index}}" id={{this.option}}>{{this.option}}</a></li>
 			      {{/each}}
 			    </ul>
+			    <a class="btn btn-danger poll-data" href="/delete/poll/{{_id}}">Delete This Poll</a>
 		    </div>
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
