--- a/public/login.html
+++ b/public/login.html
@@ -19,12 +19,12 @@
 	<body>
    		<nav class="navbar navbar-default navbar-inverse bg-inverse">
 			<div class="navbar-header">
-			  <a href="#" class="navbar-brand">Voting App</a>
+			  <a href="/polls" class="navbar-brand">Voting App</a>
 			</div>
 			<div class="container container-fluid">
 			  <ul class="nav navbar-nav navbar-right">
 
-			    <li><a href="#">Home</a></li>
+			    <li><a href="/polls">Home</a></li>
 				<li><a href="/auth/github">
 				  Login With Github
 				</a></li>
