--- a/public/newpoll.html
+++ b/public/newpoll.html
@@ -18,26 +18,28 @@
 	</head>
 
 	<body>
-   		<nav class="navbar navbar-default navbar-inverse bg-inverse">
-			<div class="navbar-header">
-			  <a href="#" class="navbar-brand">Voting App</a>
-			</div>
-			<div class="container container-fluid">
-			  <ul class="nav navbar-nav navbar-right">
-
-			    <li><a href="/">Home</a></li>
-			    <li><a href="/mypolls">My Polls</a></li>
-			    <li><a href="/newpoll">New Poll</a></li>
-				<li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Louis Heimel <span class="caret"></span></a>
-		          <ul class="dropdown-menu">
-		            <li><a href="#">Sign Out</a></li>
-		          </ul>
-       		 </li>	
-
-			  </ul>
-			</div>
-		</nav>
+			<script type="x-handlebars-template" id="navbar">
+	   		<nav class="navbar navbar-default navbar-inverse bg-inverse">
+				<div class="navbar-header">
+				  <a href="/polls" class="navbar-brand">Voting App</a>
+				</div>
+				<div class="container container-fluid">
+				  <ul class="nav navbar-nav navbar-right">
+	
+				    <li><a href="/">Home</a></li>
+				    <li><a href="/mypolls">My Polls</a></li>
+				    <li><a href="/newpoll">New Poll</a></li>
+					<li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{username}} <span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="/logout">Sign Out</a></li>
+			          </ul>
+	       		 </li>	
+	
+				  </ul>
+				</div>
+			</nav>
+		</script>
 		<div class="container-fluid">
 		    <form method="POST" action="/newpoll">
 		        <fieldset>
