--- a/public/profile.html
+++ b/public/profile.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav class="navbar navbar-default navbar-inverse bg-inverse">
 			<div class="navbar-header">
-			  <a href="#" class="navbar-brand">Voting App</a>
+			  <a href="/polls" class="navbar-brand">Voting App</a>
 			</div>
 			<div class="container container-fluid">
 			  <ul class="nav navbar-nav navbar-right">
@@ -22,7 +22,7 @@
 				<li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Louis Heimel <span class="caret"></span></a>
 		          <ul class="dropdown-menu">
-		            <li><a href="#">Sign Out</a></li>
+		            <li><a href="/logout">Sign Out</a></li>
 		          </ul>
        		 </li>	
 
