--- a/public/newpoll.html
+++ b/public/newpoll.html
@@ -49,7 +49,7 @@
                       <input name="title" class="form-control" type="text" />
 		            </div>
                     <div class="form-group">
-                      <label for="options">Options:</label>
+                      <label for="options">Options (separated by line):</label>
                       <textarea name="options" class="form-control"></textarea>
                     </div>
 
