change authentication from github to twitter

--- a/public/login.html
+++ b/public/login.html
@@ -25,8 +25,8 @@
 			  <ul class="nav navbar-nav navbar-right">
 
 			    <li><a href="/polls">Home</a></li>
-				<li><a href="/auth/github">
-				  Login With Github
+				<li><a href="/auth/twitter">
+				  Login with Twitter
 				</a></li>
 
 
